--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "Ollama Inline Translator",
   "version": "1.0.0",
   "description": "Translate non-English text inline using Ollama (via background fetch).",
+  "permissions": [
+    "contextMenus",
+    "scripting",
+    "storage" 
+  ],
   "host_permissions": [
     "http://localhost:11434/*"
   ],
@@ -15,5 +20,11 @@
       "js": ["content.js"],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "options_page": "options.html" 
 }
